@@ -30,8 +30,8 @@ $form->process( {} );
 my $xhtml = <<EOF;
 <form action="" method="post">
 <div class="multi label error error_constraint_required">
-<span class="error_message error_constraint_required">This field is required</span>
-<span class="error_message error_constraint_required">This field is required</span>
+<span>This field is required</span>
+<span>This field is required</span>
 <label>My multi</label>
 <span class="elements">
 <input name="foo" type="text" />
