@@ -28,7 +28,7 @@ my $xhtml = <<EOF;
 <form action="" method="post">
 <div class="form_error_message">There were errors with your submission, see below for details</div>
 <div class="text error error_constraint_number">
-<span class="error_message error_constraint_number">This field must be a number</span>
+<span>This field must be a number</span>
 <input name="foo" type="text" value="a" />
 </div>
 </form>
